ajax search and ajax devide page

--- a/views/admin/index.pug
+++ b/views/admin/index.pug
@@ -9,7 +9,7 @@ html(lang='en')
     meta(name='author', content='Łukasz Holeczek')
     meta(name='keyword', content='Bootstrap,Admin,Template,Open,Source,jQuery,CSS,HTML,RWD,Dashboard')
     title CoreUI Free Bootstrap Admin Template
-    link(rel="shortcut icon", href="/public/img/icon.png")
+    link(rel="shortcut icon", href="/public/img/icon.jpg")
     link(rel='stylesheet', href='/public/home/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/public/home/fonts/fontawesome-all.min.css')
     link(rel='stylesheet', href='/public/home/fonts/font-awesome.min.css')
