--- a/views/home/allProducts.pug
+++ b/views/home/allProducts.pug
@@ -11,7 +11,7 @@ block content
               | Simply dummy text of the printing and typesetting industry.
               br
               br
-            a.btn.btn-outline-warning.btn-xl.js-scroll-trigger(role='button', href='#features')  By Now!
+            a.btn.btn-outline-warning.btn-xl.js-scroll-trigger(role='button', href='#features')  Buy Now!
         .col-lg-5.my-auto
           .device-container
             .device-mockup.iphone6_plus.portrait.white
