--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -6,7 +6,7 @@ html
     link(rel="stylesheet", href="/public/css/bootstrap.min.css")
     link(rel="stylesheet", href="/public/fontawesome/css/all.min.css")
     link(rel="stylesheet", href="/public/css/admin.css")
-    link(rel="shortcut icon", href="/public/img/icon.png")
+    link(rel="shortcut icon", href="/public/img/icon.jpg")
   body
     .header
       span.title-header ADMIN AREA
