--- a/views/layouts/library.pug
+++ b/views/layouts/library.pug
@@ -2,16 +2,32 @@ doctype html
 html
   head
     title This is Title :)
-    
-    link(rel="stylesheet", href="/public/css/bootstrap.min.css")
-    link(rel="stylesheet", href="/public/fontawesome/css/all.min.css")
-    link(rel="stylesheet", href="/public/css/styles.css")
-    link(rel="shortcut icon", href="/public/img/icon.png")
+
+    link(rel="shortcut icon", href="/public/img/icon.jpg")
+    link(rel='stylesheet', href='/public/home/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/public/home/fonts/fontawesome-all.min.css')
+    link(rel='stylesheet', href='/public/home/fonts/font-awesome.min.css')
+    link(rel='stylesheet', href='/public/home/fonts/ionicons.min.css')
+    link(rel='stylesheet', href='/public/home/css/Corporate-Footer-Clean.css')
+    link(rel='stylesheet', href='/public/home/css/Footer-Dark.css')
+    link(rel='stylesheet', href='/public/home/css/News-Cards.css')
+    link(rel="stylesheet", href='/public/css/styles.css')
+
+    //- link(rel="stylesheet", href="/public/css/bootstrap.min.css")
+    //- link(rel="stylesheet", href="/public/fontawesome/css/all.min.css")
+    //- link(rel="stylesheet", href="/public/css/styles.css")
+    //- link(rel="shortcut icon", href="/public/img/icon.jpg")
   body
     block content
-    script(src="/public/js/scripts.js")    
-    script(src="/public/js/jquery.min.js")
-    script(src="/public/js/popper.js")
+    //- script(src="/public/js/scripts.js")    
+    //- script(src="/public/js/jquery.min.js")
+    //- script(src="/public/js/popper.js")
+    //- script(src="/public/js/axios.min.js")
+    //- script(src="/public/js/bootstrap.min.js")
+
+    script(src='/public/home/js/jquery.min.js')
+    script(src='/public/home/bootstrap/js/bootstrap.min.js')
+    script(src='/public/home/js/jquery-ui.min.js')
+    script(src='/public/home/js/new-age.js')
+    script(src="/public/js/scripts.js")
     script(src="/public/js/axios.min.js")
-    script(src="/public/js/bootstrap.min.js")
-    
