--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -1,5 +1,6 @@
 extends ../layouts/common
 block content
+  header(style="background:url('/public/home/img/bg-pattern.png'), linear-gradient(to left, #7b4397, #dc2430);height:10%;")
   .container(style="padding-top:60px")
     h1 Your Profile
     h4= "user id : " + user[0].id
