--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
     title ShopPhone
-    link(rel="shortcut icon", href="/public/img/icon.png")
+    link(rel='shortcut icon', href='/public/img/icon.jpg')
     link(rel='stylesheet', href='/public/home/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/public/home/fonts/fontawesome-all.min.css')
     link(rel='stylesheet', href='/public/home/fonts/font-awesome.min.css')
@@ -27,9 +27,9 @@ html
                 each producer in producers
                   a.dropdown-item(
                     role='presentation', 
-                    href=`/?producer=${producer.producer_id}&page=1`)= producer.producer_name
+                    href=`/?producer=${producer.producer_id}`)= producer.producer_name
             li.nav-item(role='presentation')
-              a.nav-link.js-scroll-trigger(href='/#containerFeature') Features
+              a.nav-link.js-scroll-trigger(href='/#features') Features
             li.nav-item(role='presentation')
               a.nav-link.js-scroll-trigger(href='#contact') Contact
             li.nav-item.dropdown
@@ -79,7 +79,7 @@ html
                   input(type="hidden", value="1", name="page")
                   input.search__field(type='search', name='search')
                   button.fas.fa-search.search__icon(type='submit')
-            a(href="/search").mt-1.ml-2 More
+            a(href="/search?search=&page=1&price=&producer=&sortByName=&sortByPrice=").mt-1.ml-2 More
 
     block content
     //- Footer
@@ -124,6 +124,7 @@ html
     script(src='/public/home/js/jquery-ui.min.js')
     script(src='/public/home/js/new-age.js')
     script(src="/public/js/scripts.js")
+    script(src="/public/js/axios.min.js")
 
 
 //- doctype html
@@ -134,7 +135,7 @@ html
 //-     link(rel="stylesheet", href="/public/css/bootstrap.min.css")
 //-     link(rel="stylesheet", href="/public/fontawesome/css/all.min.css")
 //-     link(rel="stylesheet", href="/public/css/styles.css")
-//-     link(rel="shortcut icon", href="/public/img/icon.png")
+//-     link(rel="shortcut icon", href="/public/img/icon.jpg")
 //-   body
 //-     //- Navbar
 //-     nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top.border-bottom
